--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
 body {
+  display: flex;
+  align-items: center;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #00b894;
 }
 
 code {
@@ -14,4 +17,8 @@ code {
 
 li {
   list-style-type: none;
+}
+
+#root {
+  margin: 0 auto;
 }
